--- a/service/vspo-schedule/v2/web/public/locales/tw/common.json
+++ b/service/vspo-schedule/v2/web/public/locales/tw/common.json
@@ -21,7 +21,8 @@
       "list": "直播列表",
       "clip": "剪輯",
       "twitch-clip": "Twitch 剪輯",
-      "event": "活動"
+      "event": "活動",
+      "multiview": "多視窗檢視"
     }
   },
   "drawer": {
@@ -32,6 +33,7 @@
       "freechat": "自由聊天",
       "clip": "剪輯列表",
       "twitch-clip": "Twitch 剪輯列表",
+      "multiview": "多視窗檢視",
       "about": "關於 Spodule",
       "site-news": "網站公告",
       "qa": "聯繫我們",
