--- a/service/vspo-schedule/v2/web/public/locales/en/common.json
+++ b/service/vspo-schedule/v2/web/public/locales/en/common.json
@@ -21,7 +21,8 @@
       "list": "Streams",
       "clip": "Clips",
       "twitch-clip": "Twitch Clips",
-      "event": "Events"
+      "event": "Events",
+      "multiview": "Multiview"
     }
   },
   "drawer": {
@@ -32,6 +33,7 @@
       "freechat": "Freechats",
       "clip": "Clips",
       "twitch-clip": "Twitch Clips",
+      "multiview": "Multiview",
       "about": "About Spodule",
       "site-news": "Site News",
       "qa": "Contact Us",
