--- a/service/vspo-schedule/v2/web/public/locales/ja/common.json
+++ b/service/vspo-schedule/v2/web/public/locales/ja/common.json
@@ -20,7 +20,8 @@
     "pages": {
       "list": "配信一覧",
       "clip": "切り抜き/ショート",
-      "event": "イベント"
+      "event": "イベント",
+      "multiview": "マルチビュー"
     }
   },
   "drawer": {
@@ -30,6 +31,7 @@
       "archive": "アーカイブ",
       "freechat": "フリーチャット",
       "clip": "切り抜き/ショート一覧",
+      "multiview": "マルチビュー",
       "about": "すぽじゅーるについて",
       "site-news": "お知らせ",
       "qa": "お問い合わせ",
