--- a/service/vspo-schedule/v2/web/public/locales/ko/common.json
+++ b/service/vspo-schedule/v2/web/public/locales/ko/common.json
@@ -44,8 +44,8 @@
     "site-theme": "테마"
   },
   "alert": {
-    "title": "공지",
-    "message": "Discord 봇이 업데이트되었습니다! 자세한 내용은 X를 확인하세요!"
+    "title": "신기능 출시",
+    "message": "멀티뷰 기능이 출시되었습니다! 여러 방송을 동시에 시청할 수 있습니다."
   },
   "videoModal": {
     "tabLabels": {
