--- a/service/vspo-schedule/v2/web/public/locales/cn/common.json
+++ b/service/vspo-schedule/v2/web/public/locales/cn/common.json
@@ -22,7 +22,7 @@
       "clip": "剪辑",
       "twitch-clip": "Twitch 剪辑",
       "event": "活动",
-      "multiview": "多窗口视图"
+      "multiview": "多视图"
     }
   },
   "drawer": {
@@ -33,7 +33,7 @@
       "freechat": "自由聊天",
       "clip": "剪辑列表",
       "twitch-clip": "Twitch 剪辑列表",
-      "multiview": "多窗口视图",
+      "multiview": "多视图",
       "about": "关于Spodule",
       "site-news": "网站新闻",
       "qa": "联系我们",
