chore: fix message

--- a/service/vspo-schedule/v2/web/public/locales/en/schedule.json
+++ b/service/vspo-schedule/v2/web/public/locales/en/schedule.json
@@ -35,5 +35,6 @@
   "tabs": {
     "all": "All",
     "allWithDate": "All ({{date}})"
-  }
-} 
+  },
+  "noLivestreams": "No scheduled streams. Please check the previous day's schedule."
+}
