--- a/service/vspo-schedule/v2/web/public/locales/ko/schedule.json
+++ b/service/vspo-schedule/v2/web/public/locales/ko/schedule.json
@@ -35,5 +35,6 @@
   "tabs": {
     "all": "전체",
     "allWithDate": "전체 ({{date}})"
-  }
-} 
+  },
+  "noLivestreams": "예정된 방송이 없습니다. 전날 일정을 확인해주세요."
+}
