すべての変更が完了しました。変更内容をまとめます：
**変更したファイル:**

1. `public/locales/ja/common.json` - 日本語
   - `"title": "Discord Bot公開中"`
   - `"message": "サイドバーから追加できます！"`

2. `public/locales/en/common.json` - 英語
   - `"title": "Discord Bot Available"`
   - `"message": "Add it from the sidebar!"`

3. `public/locales/cn/common.json` - 簡体字中国語
   - `"title": "Discord Bot 已上线"`
   - `"message": "可以从侧边栏添加！"`

4. `public/locales/ko/common.json` - 韓国語
   - `"title": "Discord Bot 출시"`
   - `"message": "사이드바에서 추가할 수 있습니다!"`

5. `public/locales/tw/common.json` - 繁体字中国語
   - `"title": "Discord Bot 已上線"`
   - `"message": "可以從側邊欄添加！"`

6. `src/features/shared/components/Layout/ContentLayout.tsx`
   - localStorageキーを `alertSeen-20250626` → `alertSeen-discordBot` に変更

これで、以前マルチビューのアラートを見たユーザーにも、新しいDiscord Botのポップアップが表示されるようになります。

--- a/service/vspo-schedule/v2/web/public/locales/en/common.json
+++ b/service/vspo-schedule/v2/web/public/locales/en/common.json
@@ -44,8 +44,8 @@
     "site-theme": "Theme"
   },
   "alert": {
-    "title": "New Feature Release",
-    "message": "Multiview feature released! Watch multiple streams simultaneously."
+    "title": "Discord Bot Available",
+    "message": "Add it from the sidebar!"
   },
   "videoModal": {
     "tabLabels": {
